--- a/src/refonte-site.html
+++ b/src/refonte-site.html
@@ -51,19 +51,18 @@
 </header>
 
 <div class="intro-projet">
-    <div class="image-projet"><img src="images/mockup-projet-1.png" alt="projet-jeux-de-course"></div>
+    <div class="image-projet"><img src="images/mockup-projet-2.png" alt="projet-jeux-de-course"></div>
     <div class="texte-projet">
-        <h1>Course Lumière</h1>
-        <h2>Touch Designer <span class="texte-alt-color">|</span> Jeu</h2>
-        <p>Un petit <span class="texte-alt-color">jeu de courses expérimentales</span> créées dans <span
-                class="texte-alt-color">Touch Designer</span>, malgré la nouveauté du logiciel, j’ai
-            réalisé un petit jeu de courses qui ce contrôle avec un mobile. Ce projet était un défi, car aucun jeu du
-            genre n’a vraiment été fait auparavant dans ce logiciel. Ce projet a été réalisé dans le cadre de mon cours
-            ‘Média Interactif IV'. Pour la programmation, j’ai utilisé la <span
-                    class="texte-alt-color">programmation</span> de type ‘<span class="texte-alt-color">noeud</span>’ de
-            Touch
-            Designer et j’ai tout modélisé les élément 3D
-            avec <span class="texte-alt-color">Blender</span>.</p>
+        <h1>Refonte d’un site</h1>
+        <h2>WordPress <span class="texte-alt-color">|</span> HTML/CSS/JS</h2>
+        <p>La <span class="texte-alt-color">refonte</span> d’un site complet existant. La <span class="texte-alt-color">pourvoirie boismenu</span>
+            avait un site non fonctionnel, des icônes
+            invisibles. J’ai refait le site tout en respectant leur <span
+                    class="texte-alt-color">direction artistique</span> et leurs <span class="texte-alt-color">fonctionnalités</span>.
+            Ce
+            projet a été réalisé dans le cadre de mon cours ‘Production Web'. Pour la programmation j’ai utilisé
+            <span class="texte-alt-color">HTML/CSS/JS</span>, puis <span class="texte-alt-color">PHP</span> pour
+            l’intégrer dans <span class="texte-alt-color">WordPress</span>.</p>
         <p>Crédit : <span class="texte-alt-color">Cédric Ménard</span></p>
 
         <div class="logiciels-competences-projet">
@@ -71,12 +70,13 @@
                 <h2>Logiciels</h2>
                 <div class="flex-logiciels">
                     <div class="titre-logo-projet">
-                        <p>Touch Designer</p>
-                        <img src="images/touchDesigner-icon.png" alt="icon-touch-designer">
+                        <img src="images/webstorm-icon.png" alt="icon-webstorm">
                     </div>
                     <div class="titre-logo-projet">
-                        <p>Blender</p>
-                        <img src="images/blender-icon.png" alt="icon-blender">
+                        <img src="images/phpstorm-1.png" alt="icon-phpstorm">
+                    </div>
+                    <div class="titre-logo-projet">
+                        <img src="images/icone-wordpress.png" alt="icon-wordpress">
                     </div>
                 </div>
             </div>
@@ -99,7 +99,7 @@
 <section data-aos="zoom-in-down"
          data-aos-duration="1000" class="course-demo">
     <h1>Video Demo</h1>
-        <iframe src="https://www.youtube.com/embed/5W9M3tTiSGw?controls=0"></iframe>
+    <iframe src="https://www.youtube.com/embed/5W9M3tTiSGw?controls=0"></iframe>
 </section>
 
 <section data-aos="zoom-in-down"
