--- a/src/singles.html
+++ b/src/singles.html
@@ -44,7 +44,7 @@
         <!-- fix-navbar -->
         <div class="navbar" id="navbar">
             <a href="index.html">Cédric Ménard</a>
-            <span class="menu" style="font-size:65px;cursor:pointer">+</span>
+            <span class="menu" style="font-size:65px;cursor:none">+</span>
         </div>
 
     </nav>
@@ -71,7 +71,7 @@
             <p>WordPress | HTML/CSS/JS</p>
             <h2>Refonte d’un Site</h2>
             <p>Projet Scolaire</p>
-            <a href=""><button type="button">Voir le projet</button></a>
+            <a href="refonte-site.html"><button type="button">Voir le projet</button></a>
         </div>
         <a href=""><img src="images/mockup-projet-2.png" alt="refonte-site-pourvoirie"></a>
     </div>
