--- a/src/a-propos.html
+++ b/src/a-propos.html
@@ -44,7 +44,7 @@
         <!-- fix-navbar -->
         <div class="navbar" id="navbar">
             <a href="index.html">Cédric Ménard</a>
-            <span class="menu" style="font-size:65px;cursor:pointer">+</span>
+            <span class="menu" style="font-size:65px;cursor:none">+</span>
         </div>
 
     </nav>
