contenue page refonte site et page verum et debut site ecommerce

--- a/src/course-lumiere.html
+++ b/src/course-lumiere.html
@@ -51,7 +51,7 @@
 </header>
 
 <div class="intro-projet">
-    <div class="image-projet"><img src="images/mockup-projet-1.png" alt="projet-jeux-de-course"></div>
+    <div class="image-projet"><img src="images/mockup-projet-1.png" alt="projet-desktop-refonte-image"></div>
     <div class="texte-projet">
         <h1>Course Lumière</h1>
         <h2>Touch Designer <span class="texte-alt-color">|</span> Jeu</h2>
@@ -97,7 +97,7 @@
 </div>
 
 <section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="course-demo">
+         data-aos-duration="1000" class="single-demo-video">
     <h1>Video Demo</h1>
         <iframe src="https://www.youtube.com/embed/5W9M3tTiSGw?controls=0"></iframe>
 </section>
