--- a/src/singles.html
+++ b/src/singles.html
@@ -83,7 +83,7 @@
             <p>Figma | Expérience Intéractive</p>
             <h2>Verum</h2>
             <p>Projet Scolaire</p>
-            <a href=""><button type="button">Voir le projet</button></a>
+            <a href="verum.html"><button type="button">Voir le projet</button></a>
         </div>
         <a href=""><img src="images/mockup-projet-3.png" alt="acceuil-experience-verum"></a>
     </div>
@@ -97,7 +97,7 @@
             <p>Projet Scolaire</p>
             <a href=""><button type="button">Voir le projet</button></a>
         </div>
-        <a href=""><img src="images/mockup-projet-4.png" alt="site-eCommerce-acceuil-boutique"></a>
+        <a href="site-ecommerce.html"><img src="images/mockup-projet-4.png" alt="site-eCommerce-acceuil-boutique"></a>
     </div>
 
     <div data-aos="fade-right"
@@ -109,7 +109,7 @@
             <p>Projet Scolaire</p>
             <a href=""><button type="button">Voir le projet</button></a>
         </div>
-        <a href=""><img class="citrouille" src="images/mockup-projet-5.png" alt="film-citrouille"></a>
+        <a href="projection-mapping.html"><img class="citrouille" src="images/mockup-projet-5.png" alt="film-citrouille"></a>
     </div>
 </section>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
