--- a/src/refonte-site.html
+++ b/src/refonte-site.html
@@ -84,11 +84,16 @@
                 <h2>Compétences</h2>
                 <div class="flex-competences">
                     <div class="titre-logo-projet">
-                        <p>Python</p>
-                        <img src="images/python-icon.png" alt="">
+                        <img src="images/html5.png" alt="icon-html-5">
                     </div>
                     <div class="titre-logo-projet">
-                        <img src="images/3D.png" alt="">
+                        <img src="images/css-icon-1.png" alt="icon-css">
+                    </div>
+                    <div class="titre-logo-projet">
+                        <img src="images/javascript-logo.png" alt="icon-js">
+                    </div>
+                    <div class="titre-logo-projet">
+                        <img src="images/php-icone.png" alt="icon-php">
                     </div>
                 </div>
             </div>
@@ -97,35 +102,33 @@
 </div>
 
 <section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="course-demo">
+         data-aos-duration="1000" class="single-demo-video">
     <h1>Video Demo</h1>
-    <iframe src="https://www.youtube.com/embed/5W9M3tTiSGw?controls=0"></iframe>
+    <iframe src="https://www.youtube.com/embed/kWp3R5SsEJE?controls=0"></iframe>
 </section>
 
 <section data-aos="zoom-in-down"
          data-aos-duration="1000" class="projet-section">
-    <h1>Programmation en <span class="texte-alt-color">noeud</span></h1>
-    <img src="images/course-programmation.jpg" alt="course-programmation">
-</section>
-
-<section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="projet-section-slider">
-    <h1>Modélisation de la voiture</h1>
-    <div class="projet-slider">
-        <div class="slide-projet" id="slide-projet-1"><img src="images/course-voiture-sans-texture.jpg" alt=""></div>
-        <div class="slide-projet" id="slide-projet-2"><img src="images/course-voiture-avec-texture.jpg" alt=""></div>
-        <div class="slide-projet" id="slide-projet-3"><img src="images/course-acceuil.jpg" alt=""></div>
-    </div>
+    <h1>Programmation <span class="texte-alt-color">Front-Page (HTML/PHP)</span></h1>
+    <img src="images/programmation-front-page.jpg" alt="refonte-site-programmation">
 </section>
 
 <section data-aos="zoom-in-down"
          data-aos-duration="1000" class="projet-section">
-    <h1>Modélisation du sol</h1>
-    <img src="images/course-bg-sol-blender.jpg" alt="course-sol-3d">
+    <h1>Programmation <span class="texte-alt-color">ACF</span></h1>
+    <img src="images/refonte-acf.jpg" alt="refonte-site-programmation">
 </section>
 
-<section class="projet-section-couleur">
+<section data-aos="zoom-in-down"
+         data-aos-duration="1000" class="projet-section">
+    <h1>Programmation <span class="texte-alt-color">CPT</span></h1>
+    <img src="images/refonte-cpt.jpg" alt="refonte-site-programmation">
+</section>
 
+<section data-aos="zoom-in-down"
+         data-aos-duration="1000" class="projet-section">
+    <h1>Utilisation de <span class="texte-alt-color">GitHub</span></h1>
+    <img src="images/refonte-github.jpg" alt="refonte-site-programmation">
 </section>
 
 
