--- a/src/verum.html
+++ b/src/verum.html
@@ -1,10 +1,130 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+    <title>Projet - Course Lumière</title>
+
+    <link href="css/main.css" rel="stylesheet">
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Epilogue:wght@700&display=swap"
+          rel="stylesheet">
+
+    <!-- FontAwesome -->
+    <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+          integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" rel="stylesheet">
+
+    <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet"/>
+
+    <!-- Script -->
+    <script src="js/script.js"></script>
+
+
 </head>
 <body>
+<div class="loader">
+    <img alt="chargement" src="images/loading.gif">
+</div>
+<div class="cursor"></div>
+<header class="header-page">
+    <nav>
+        <!-- nav-hamburger -->
+        <div class="sidenav" id="mySidenav">
+            <a class="closeMenu" href="javascript:void(0)">-</a>
+            <a href="index.html">&#8226; Acceuil</a>
+            <a href="singles.html">&#8226; Projets</a>
+            <a href="a-propos.html">&#8226; À propos</a>
+            <a href="contact.html">&#8226; Contact</a>
+        </div>
 
+        <!-- fix-navbar -->
+        <div class="navbar" id="navbar">
+            <a href="index.html">Cédric Ménard</a>
+            <span class="menu" style="font-size:65px;cursor:none">+</span>
+        </div>
+
+    </nav>
+</header>
+
+<div class="intro-projet">
+    <div class="image-projet"><img src="images/mockup-projet-3.png" alt="projet-jeux-de-course"></div>
+    <div class="texte-projet">
+        <h1>Verum</h1>
+        <h2>Figma <span class="texte-alt-color">|</span> Expérience Intéractive</h2>
+        <p>Une <span class="texte-alt-color">Expérience interactive</span> testant les connaissances sur la <span
+                class="texte-alt-color">désinformation</span>. Le principle est simple, des situations possibles sont
+            présentées et le but est de deviner si c’est un <span
+                    class="texte-alt-color">vrai ou une fausse nouvelle</span>. Ce projet a été réalisé dans le cadre de
+            mon cours ‘Design d’expérience’. Ce projet était un travail en <span
+                    class="texte-alt-color">équipe de 4</span>, j’ai légèrement participé au design (boussole) et fais
+            la majorité du <span class="texte-alt-color">protypage</span> dans figma.</p>
+        <p>Crédit : Programmation/Prototypage : <span class="texte-alt-color">Cédric Ménard</span></p>
+
+        <div class="logiciels-competences-projet">
+            <div class="un-logiciel">
+                <h2>Logiciels</h2>
+                <div class="flex-logiciels">
+                    <div class="titre-logo-projet">
+                        <img src="images/figma-icon.png" alt="icon-webstorm">
+                    </div>
+                </div>
+            </div>
+            <div class="une-competence">
+                <h2>Compétences</h2>
+                <div class="flex-competences">
+                    <div class="titre-logo-projet">
+                        <img src="images/figma-icon.png" alt="icon-html-5">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<section data-aos="zoom-in-down"
+         data-aos-duration="1000" class="figma-verum">
+    <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FBVnoaDnzV8xjXX67hZokVQ%2FTP3-Gabarit-de-d%C3%A9part-Copy-Copy%3Fnode-id%3D671%253A102600%26scaling%3Dscale-down-width%26page-id%3D2%253A4%26starting-point-node-id%3D673%253A15643"
+            allowfullscreen></iframe>
+</section>
+
+<section data-aos="zoom-in-down"
+         data-aos-duration="1000" class="projet-section-slider">
+    <h1> <span class="texte-alt-color">Esquisse</span> du projet</h1>
+    <div class="projet-slider">
+        <div class="slide-projet" id="slide-projet-1"><img src="images/verum-acceuil.jpg" alt="acceuil-sketch-verum"></div>
+        <div class="slide-projet" id="slide-projet-2"><img src="images/verum-question.jpg" alt="question-sketch-verum"></div>
+    </div>
+</section>
+
+<section data-aos="zoom-in-down"
+         data-aos-duration="1000" class="projet-section">
+    <h1>Premier Prototype</h1>
+    <img src="images/verum-prototypage-low-fi.jpg" alt="prototype-lo-fi">
+</section>
+
+<section data-aos="zoom-in-down"
+         data-aos-duration="1000" class="projet-section">
+    <h1>Prototype Avancé</h1>
+    <img src="images/verum-prototypage-high-fi.jpg" alt="prototype-hi-fi">
+</section>
+
+<section data-aos="zoom-in-down"
+         data-aos-duration="1000" class="projet-section">
+    <h1>Prototype Final</h1>
+    <img src="images/verum-prototypage-final.jpg" alt="prototype-final">
+</section>
+
+
+<footer>
+    <p>© Tous droit réservé à Cédric Ménard</p>
+</footer>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+    AOS.init();
+</script>
 </body>
 </html>
