fin pages desktop - responsive page liste de projets et pages projet single

--- a/src/a-propos.html
+++ b/src/a-propos.html
@@ -172,7 +172,7 @@
     </div>
 </section>
 
-<footer>
+<footer class="a-propos-footer">
     <p class="footer-apropos">© Tous droit réservé à Cédric Ménard</p>
 </footer>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
