--- a/src/singles.html
+++ b/src/singles.html
@@ -62,7 +62,7 @@
             <p>Projet Scolaire</p>
             <a href="course-lumiere.html"><button type="button">Voir le projet</button></a>
         </div>
-        <a href=""><img src="images/mockup-projet-1.png" alt="course-grille-lumière"></a>
+        <a href="course-lumiere.html"><img src="images/mockup-projet-1.png" alt="course-grille-lumière"></a>
     </div>
     <div data-aos="fade-left"
          data-aos-offset="400"
@@ -73,7 +73,7 @@
             <p>Projet Scolaire</p>
             <a href="refonte-site.html"><button type="button">Voir le projet</button></a>
         </div>
-        <a href=""><img src="images/mockup-projet-2.png" alt="refonte-site-pourvoirie"></a>
+        <a href="refonte-site.html"><img src="images/mockup-projet-2.png" alt="refonte-site-pourvoirie"></a>
     </div>
 
     <div data-aos="fade-right"
@@ -85,7 +85,7 @@
             <p>Projet Scolaire</p>
             <a href="verum.html"><button type="button">Voir le projet</button></a>
         </div>
-        <a href=""><img src="images/mockup-projet-3.png" alt="acceuil-experience-verum"></a>
+        <a href="verum.html"><img src="images/mockup-projet-3.png" alt="acceuil-experience-verum"></a>
     </div>
 
     <div data-aos="fade-left"
@@ -95,7 +95,7 @@
             <p>WordPress | WooCommerce</p>
             <h2>Site eCommerce</h2>
             <p>Projet Scolaire</p>
-            <a href=""><button type="button">Voir le projet</button></a>
+            <a href="site-ecommerce.html"><button type="button">Voir le projet</button></a>
         </div>
         <a href="site-ecommerce.html"><img src="images/mockup-projet-4.png" alt="site-eCommerce-acceuil-boutique"></a>
     </div>
@@ -107,11 +107,16 @@
             <p>Blender | Projection Mapping</p>
             <h2>Grosse Citrouille</h2>
             <p>Projet Scolaire</p>
-            <a href=""><button type="button">Voir le projet</button></a>
+            <a href="projection-mapping.html"><button type="button">Voir le projet</button></a>
         </div>
         <a href="projection-mapping.html"><img class="citrouille" src="images/mockup-projet-5.png" alt="film-citrouille"></a>
     </div>
 </section>
+
+<footer>
+    <p>© Tous droit réservé à Cédric Ménard</p>
+</footer>
+
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
     AOS.init();
