--- a/src/site-ecommerce.html
+++ b/src/site-ecommerce.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Projet - Course Lumière</title>
+    <title>Projet - Site eCommerce</title>
 
     <link href="css/main.css" rel="stylesheet">
 
@@ -51,18 +51,21 @@
 </header>
 
 <div class="intro-projet">
-    <div class="image-projet"><img src="images/mockup-projet-2.png" alt="projet-jeux-de-course"></div>
+    <div class="image-projet"><img src="images/mockup-projet-4.png" alt="projet-site-ecommerce"></div>
     <div class="texte-projet">
         <h1>Refonte d’un site</h1>
         <h2>WordPress <span class="texte-alt-color">|</span> HTML/CSS/JS</h2>
-        <p>La <span class="texte-alt-color">refonte</span> d’un site complet existant. La <span class="texte-alt-color">pourvoirie boismenu</span>
-            avait un site non fonctionnel, des icônes
-            invisibles. J’ai refait le site tout en respectant leur <span
-                    class="texte-alt-color">direction artistique</span> et leurs <span class="texte-alt-color">fonctionnalités</span>.
-            Ce
-            projet a été réalisé dans le cadre de mon cours ‘Production Web'. Pour la programmation j’ai utilisé
-            <span class="texte-alt-color">HTML/CSS/JS</span>, puis <span class="texte-alt-color">PHP</span> pour
-            l’intégrer dans <span class="texte-alt-color">WordPress</span>.</p>
+        <p>Un site <span class="texte-alt-color">eCommerce</span> utilisant une plateforme de paiement <span
+                class="texte-alt-color">Stripe</span> et <span class="texte-alt-color">Paypal</span>. Ce travail était
+            principalement du
+            <span class="texte-alt-color">back-end</span> et l’introduction pour nous aux <span class="texte-alt-color">plateformes de paiements</span>.
+            Pour cela nous avons utilisé le plug-in
+            <span class="texte-alt-color">Woo Commerce</span>. Ce projet a été réalisé dans le cadre de mon cours
+            ‘Production Web'. Pour ce projet
+            l’utilisation d’un thème existant était requise, j’ai tout de même utilisé du <span class="texte-alt-color">CSS</span>
+            directement dans WordPress
+            pour modifier la mise en forme et donner un résultat qui me convenait. Le site est également <span
+                    class="texte-alt-color">responsive</span>.</p>
         <p>Crédit : <span class="texte-alt-color">Cédric Ménard</span></p>
 
         <div class="logiciels-competences-projet">
@@ -70,13 +73,10 @@
                 <h2>Logiciels</h2>
                 <div class="flex-logiciels">
                     <div class="titre-logo-projet">
-                        <img src="images/webstorm-icon.png" alt="icon-webstorm">
+                        <img src="images/icone-wordpress.png" alt="icon-webstorm">
                     </div>
                     <div class="titre-logo-projet">
-                        <img src="images/phpstorm-1.png" alt="icon-phpstorm">
-                    </div>
-                    <div class="titre-logo-projet">
-                        <img src="images/icone-wordpress.png" alt="icon-wordpress">
+                        <img src="images/WooCommerce_logo.png" alt="icon-phpstorm">
                     </div>
                 </div>
             </div>
@@ -84,16 +84,10 @@
                 <h2>Compétences</h2>
                 <div class="flex-competences">
                     <div class="titre-logo-projet">
-                        <img src="images/html5.png" alt="icon-html-5">
+                        <img src="images/icone-wordpress.png" alt="icon-html-5">
                     </div>
                     <div class="titre-logo-projet">
-                        <img src="images/css-icon-1.png" alt="icon-css">
-                    </div>
-                    <div class="titre-logo-projet">
-                        <img src="images/javascript-logo.png" alt="icon-js">
-                    </div>
-                    <div class="titre-logo-projet">
-                        <img src="images/php-icone.png" alt="icon-php">
+                        <img src="images/css-icon.png" alt="icon-html-5">
                     </div>
                 </div>
             </div>
@@ -103,32 +97,31 @@
 
 <section data-aos="zoom-in-down"
          data-aos-duration="1000" class="single-demo-video">
-    <h1>Video Demo</h1>
-    <iframe src="https://www.youtube.com/embed/kWp3R5SsEJE?controls=0"></iframe>
+    <a href="https://cmenard.dectim.ca/TechTim/"><img src="images/techtim-voirlesite.jpg" alt="lien-site-web"></a>
 </section>
 
 <section data-aos="zoom-in-down"
          data-aos-duration="1000" class="projet-section">
-    <h1>Programmation <span class="texte-alt-color">Front-Page (HTML/PHP)</span></h1>
-    <img src="images/programmation-front-page.jpg" alt="refonte-site-programmation">
+    <h1>Mise en place du <span class="texte-alt-color">code promo</span> avec WooCommerce</h1>
+    <img src="images/techtim-code-promo.jpg" alt="refonte-site-programmation">
 </section>
 
 <section data-aos="zoom-in-down"
          data-aos-duration="1000" class="projet-section">
-    <h1>Programmation <span class="texte-alt-color">ACF</span></h1>
-    <img src="images/refonte-acf.jpg" alt="refonte-site-programmation">
+    <h1>Création d’un <span class="texte-alt-color">inventaire</span> de boutique WooCommerce</h1>
+    <img src="images/techtim-produits.jpg" alt="refonte-site-programmation">
 </section>
 
 <section data-aos="zoom-in-down"
          data-aos-duration="1000" class="projet-section">
-    <h1>Programmation <span class="texte-alt-color">CPT</span></h1>
-    <img src="images/refonte-cpt.jpg" alt="refonte-site-programmation">
+    <h1>Boutique avec <span class="texte-alt-color">catégories</span></h1>
+    <img src="images/techtim-categories.jpg" alt="refonte-site-programmation">
 </section>
 
 <section data-aos="zoom-in-down"
          data-aos-duration="1000" class="projet-section">
-    <h1>Utilisation de <span class="texte-alt-color">GitHub</span></h1>
-    <img src="images/refonte-github.jpg" alt="refonte-site-programmation">
+    <h1>Variation pour un <span class="texte-alt-color">produit</span></h1>
+    <img src="images/techtim-variation.jpg" alt="refonte-site-programmation">
 </section>
 
 
