--- a/src/projection-mapping.html
+++ b/src/projection-mapping.html
@@ -1,10 +1,122 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+    <title>Projet - Projection Mapping</title>
+
+    <link href="css/main.css" rel="stylesheet">
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Epilogue:wght@700&display=swap"
+          rel="stylesheet">
+
+    <!-- FontAwesome -->
+    <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+          integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" rel="stylesheet">
+
+    <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet"/>
+
+    <!-- Script -->
+    <script src="js/script.js"></script>
+
+
 </head>
 <body>
+<div class="loader">
+    <img alt="chargement" src="images/loading.gif">
+</div>
+<div class="cursor"></div>
+<header class="header-page">
+    <nav>
+        <!-- nav-hamburger -->
+        <div class="sidenav" id="mySidenav">
+            <a class="closeMenu" href="javascript:void(0)">-</a>
+            <a href="index.html">&#8226; Acceuil</a>
+            <a href="singles.html">&#8226; Projets</a>
+            <a href="a-propos.html">&#8226; À propos</a>
+            <a href="contact.html">&#8226; Contact</a>
+        </div>
 
+        <!-- fix-navbar -->
+        <div class="navbar" id="navbar">
+            <a href="index.html">Cédric Ménard</a>
+            <span class="menu" style="font-size:65px;cursor:none">+</span>
+        </div>
+
+    </nav>
+</header>
+
+<div class="intro-projet">
+    <div class="image-projet"><img src="images/mockup-projet-5.png" alt="projet-projection-mapping-mockup"></div>
+    <div class="texte-projet">
+        <h1>Projection mapping</h1>
+        <h2>Blender <span class="texte-alt-color">|</span> fSpy</h2>
+        <p>Un court film de 15 secondes utilisant une technique pour projeter une image 2D sur des éléments modélisés
+            par moi-même en 3D. Ce projet a été réalisé dans le cadre de mon cours ‘Production Numérique'. Pour ce
+            projet j’ai entièrement utilisé Blender pour la modélisation et l’animation et pour la projection j’ai
+            utilisé l'add-on fspy qui fonctionne en relation avec Blender pour appliquer la texture avec la caméra à
+            l’environnement grace à des points de fuites.</p>
+        <p>Crédit : <span class="texte-alt-color">Cédric Ménard</span></p>
+
+        <div class="logiciels-competences-projet">
+            <div class="un-logiciel">
+                <h2>Logiciels</h2>
+                <div class="flex-logiciels">
+                    <div class="titre-logo-projet">
+                        <p>Blender</p>
+                        <img src="images/blender-icon.png" alt="icon-blender">
+                    </div>
+                </div>
+            </div>
+            <div class="une-competence">
+                <h2>Compétences</h2>
+                <div class="flex-competences">
+                    <div class="titre-logo-projet">
+                        <img src="images/3D.png" alt="icone-3d">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<section data-aos="zoom-in-down"
+         data-aos-duration="1000" class="citrouille-demo-video">
+    <h1>Video</h1>
+    <video controls id="citrouille-video">
+        <source src="images/citrouille-video.mp4" type="video/mp4">
+    </video>
+</section>
+
+<section data-aos="zoom-in-down"
+         data-aos-duration="1000" class="projet-section">
+    <h1>L’image originale</h1>
+    <img src="images/projection-photo.jpg" alt="photo-ruelle">
+</section>
+
+<section data-aos="zoom-in-down"
+         data-aos-duration="1000" class="projet-section">
+    <h1>Le décor</h1>
+    <img src="images/projection-decor.jpg" alt="decor-3d-dans-blender">
+</section>
+
+<section data-aos="zoom-in-down"
+         data-aos-duration="1000" class="projet-section">
+    <h1>La scène</h1>
+    <img src="images/projection-scene.jpg" alt="scene-3d-dans-blender">
+</section>
+
+
+<footer>
+    <p>© Tous droit réservé à Cédric Ménard</p>
+</footer>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+    AOS.init();
+</script>
 </body>
 </html>
