--- a/src/refonte-site.html
+++ b/src/refonte-site.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Projet - Course Lumière</title>
+    <title>Projet - Refonte d’un site</title>
 
     <link href="css/main.css" rel="stylesheet">
 
