competences et contact responsive et ajout cv telechargement

--- a/src/contact.html
+++ b/src/contact.html
@@ -57,7 +57,7 @@
         <div class="info-contact">
             <h2>Contact: <br> <span class="texte-alt-color">web@cedricmenard.ca</span></h2>
             <h2>Téléphone: <br> <span class="texte-alt-color">438-399-8349</span></h2>
-            <button type="button">Voir mon CV</button>
+            <div class="cv-btn"><a href="images/Cedric_Menard-CV.pdf" download><button type="button">Voir mon CV</button></a></div>
             <div class="sociaux">
                 <a href="https://www.linkedin.com/in/c%C3%A9dric-m%C3%A9nard-40ab621a8/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="https://www.youtube.com/channel/UC4ELHn9lArnMBaZl6ErUjHg/" target="_blank"><i class="fab fa-youtube-square"></i></a>
@@ -73,9 +73,9 @@
 
             <textarea id="Sujet" name="Sujet" placeholder="Sujet" style="height:200px"></textarea>
         </div>
-
     </div>
 </section>
+
 <footer>
     <p>© Tous droit réservé à Cédric Ménard</p>
 </footer>
