remplacer formulaire par logo et enlever underline

--- a/src/contact.html
+++ b/src/contact.html
@@ -65,13 +65,18 @@
             </div>
         </div>
         <div class="formulaire-contact">
-            <label for="fnom"></label>
-            <input type="text" id="fnom" name="nom" placeholder="Nom">
+<!--            <form>-->
+<!--            <label for="fnom"></label>-->
+<!--            <input type="text" id="fnom" name="nom" placeholder="Nom">-->
 
-            <label for="fmail"></label>
-            <input type="text" id="fmail" name="mail" placeholder="Courriel">
+<!--            <label for="fmail"></label>-->
+<!--            <input type="text" id="fmail" name="mail" placeholder="Courriel">-->
 
-            <textarea id="Sujet" name="Sujet" placeholder="Sujet" style="height:200px"></textarea>
+<!--            <textarea id="Sujet" name="Sujet" placeholder="Sujet" style="height:200px"></textarea>-->
+
+<!--            <input type="submit" name="nom" value=" Envoyer ">-->
+<!--            </form>-->
+            <img src="images/courriel-logo.png" alt="">
         </div>
     </div>
 </section>
