--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
 </header>
 
 <section class="video-demo-bg">
-    <video playsinline autoplay muted loop poster="images/demo-placeholder.jpg" id="bgvideo">
+    <video playsinline autoplay muted loop id="bgvideo">
         <source src="images/demo.mp4" type="video/mp4">
     </video>
 </section>
