Responsive a-propos et ajouts carrousel et images

--- a/src/course-lumiere.html
+++ b/src/course-lumiere.html
@@ -8,6 +8,7 @@
 
     <link href="css/main.css" rel="stylesheet">
 
+
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
@@ -18,6 +19,7 @@
     <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
           integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" rel="stylesheet">
 
+    <!--aos-->
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet"/>
 
     <!-- Script -->
@@ -105,24 +107,27 @@
     <img src="images/course-programmation.jpg" alt="course-programmation">
 </section>
 
-<section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="projet-section-slider">
+<section class="projet-section-slider"
+         data-aos="zoom-in-down" data-aos-duration="1000">
     <h1>Modélisation de la voiture</h1>
-    <div class="projet-slider">
-        <div class="slide-projet" id="slide-projet-1"><img src="images/course-voiture-sans-texture.jpg" alt=""></div>
-        <div class="slide-projet" id="slide-projet-2"><img src="images/course-voiture-avec-texture.jpg" alt=""></div>
-        <div class="slide-projet" id="slide-projet-3"><img src="images/course-acceuil.jpg" alt=""></div>
+    <div class="flex-slider">
+    <div id="slider">
+        <figure>
+        <img src="images/course-voiture-sans-texture.jpg" alt="modele-voiture-sans-texture">
+        <img src="images/course-voiture-avec-texture.jpg" alt="modele-voiture-avec-texture">
+        <img src="images/course-voiture-rendu-cycle.jpg" alt="modele-voiture-rendu-final">
+        <img src="images/course-acceuil.jpg" alt="modele-voiture-rendu-final">
+        <img src="images/course-voiture-sans-texture.jpg" alt="modele-voiture-sans-texture">
+        </figure>
     </div>
+        </div>
 </section>
 
-<section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="projet-section">
+
+<section class="projet-section"
+         data-aos="zoom-in-down" data-aos-duration="1000">
     <h1>Modélisation du sol</h1>
-    <img src="images/course-bg-sol-blender.jpg" alt="course-sol-3d">
-</section>
-
-<section class="projet-section-couleur">
-
+    <img alt="course-sol-3d" src="images/course-bg-sol-blender.jpg">
 </section>
 
 
