--- a/src/site-ecommerce.html
+++ b/src/site-ecommerce.html
@@ -96,7 +96,7 @@
 </div>
 
 <section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="single-demo-video">
+         data-aos-duration="1000" class="single-voir-site">
     <a href="https://cmenard.dectim.ca/TechTim/"><img src="images/techtim-voirlesite.jpg" alt="lien-site-web"></a>
 </section>
 
