--- a/src/verum.html
+++ b/src/verum.html
@@ -92,12 +92,9 @@
 </section>
 
 <section data-aos="zoom-in-down"
-         data-aos-duration="1000" class="projet-section-slider">
-    <h1> <span class="texte-alt-color">Esquisse</span> du projet</h1>
-    <div class="projet-slider">
-        <div class="slide-projet" id="slide-projet-1"><img src="images/verum-acceuil.jpg" alt="acceuil-sketch-verum"></div>
-        <div class="slide-projet" id="slide-projet-2"><img src="images/verum-question.jpg" alt="question-sketch-verum"></div>
-    </div>
+         data-aos-duration="1000" class="projet-section">
+    <h1>Esquisse Prototype</h1>
+    <img src="images/verum-acceuil.jpg" alt="prototype-sketch">
 </section>
 
 <section data-aos="zoom-in-down"
