single et contact responsive

--- a/src/refonte-site.html
+++ b/src/refonte-site.html
@@ -109,7 +109,7 @@
 
 <section data-aos="zoom-in-down"
          data-aos-duration="1000" class="projet-section">
-    <h1>Programmation <span class="texte-alt-color">Front-Page (HTML/PHP)</span></h1>
+    <h1>Programmation <span class="texte-alt-color">Front-Page</span></h1>
     <img src="images/programmation-front-page.jpg" alt="refonte-site-programmation">
 </section>
 
